Fixing layout bug where main container has mystery space at the bottom

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -396,8 +396,9 @@ main .contain {
       font-size: inherit;
       position: relative;
       top: -100px;
+      margin-bottom: -110px;
       float: right;
-      padding: 2.25em; }
+      padding: 2.25em 2.25em 0 2.25em; }
       main .contain:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 64em) {
